controller and service for queue display screen